Added a namespace specific to this module

--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
 	"name": "Sticky Matrix Headers",
 
+	"namespace": "Vanderbilt\\StickyMatrixHeadersExternalModule",
+
 	"authors": [
 		{
 			"name": "Mark McEver",
