--- a/config.json
+++ b/config.json
@@ -15,5 +15,7 @@
 		"hook_survey_page"
 	],
 
-	"description": "Makes the matrix header for a matrix of fields always visible (as long as the matrix is visible) - for surveys only."
+	"description": "Makes the matrix header for a matrix of fields always visible (as long as the matrix is visible) - for surveys only.",
+	
+	"redcap-version-max": "8.10.50"
 }
